--- a/Assigment1.html
+++ b/Assigment1.html
@@ -71,7 +71,7 @@
         <section id="projects">
             <h2>Projects</h2>
             <ol>
-                <ul>VS Code Extension – Productivity Enhancer</ul>
+                <ul>VS Code Extension Productivity Enhancer</ul>
                 <li>Built a custom VS Code extension using JavaScript and Node.js to boost developer productivity. 
                     It automates repetitive coding tasks, adds quick-access commands, and enhances workflow efficiency using the VS Code API.</li>
             </ol>
