Login page addes

--- a/Bootstrap/Login.html
+++ b/Bootstrap/Login.html
@@ -32,11 +32,8 @@
                                 <input type="password" class="form-control" id="password" placeholder="Enter Password"
                                     required>
                             </div>
-                            <div class="row mb-3">
-                                <div class="col-6"><button type="reset" class="btn btn-secondary w-100">Reset</button>
-                                </div>
-                                <div class="col-6"><button type="submit" class="btn btn-primary w-100">Sign-In</button>
-                                </div>
+                            <div class="d-grid">
+                                <button type="submit" class="btn btn-primary">login</button>
                             </div>
                             <p class="text-center mb-0">Don't have an account? <a href="signup.html"
                                     class="text-decoration-none">Register here</a></p>
